--- a/index.html
+++ b/index.html
@@ -270,41 +270,73 @@
               />
             </button>
             <div class="price__wrapper-cards">
-              <div class="price__card">
-                <img src="/img/number1.png" alt="" class="price__card-img" />
-                <p class="price__card-one-p lang-Wilderness">
-                  Wilderness Club at Big Ceddar
-                </p>
-                <div class="price__title-one lang-Bathrooms">2 Baños</div>
-                <div class="price__title-price">
-                  <div class="price__title-dollar">$816</div>
-                  <div class="price__title-night lang-nigth">/3 night</div>
+              <div class="price__wrap">
+                <div class="price__card">
+                  <img src="/img/number2.png" alt="" class="price__card-img" />
+                  <p class="price__card-one-p lang-WildernessTwo">
+                    Wilderness Club at Big Ceddar
+                  </p>
+                  <div class="price__title-one lang-jacuzzi">
+                    1 Baño con jacujacuzzi
+                  </div>
+                  <div class="price__title-price">
+                    <div class="price__title-dollar">$2016</div>
+                    <div class="price__title-night lang-nigthTwo">/6 night</div>
+                  </div>
                 </div>
-              </div>
-              <div class="price__card">
-                <img src="/img/number2.png" alt="" class="price__card-img" />
-                <p class="price__card-one-p lang-WildernessTwo">
-                  Wilderness Club at Big Ceddar
-                </p>
-                <div class="price__title-one lang-jacuzzi">
-                  1 Baño con jacujacuzzi
+                <div class="price__card">
+                  <img src="/img/number1.png" alt="" class="price__card-img" />
+                  <p class="price__card-one-p lang-Wilderness">
+                    Wilderness Club at Big Ceddar
+                  </p>
+                  <div class="price__title-one lang-Bathrooms">2 Baños</div>
+                  <div class="price__title-price">
+                    <div class="price__title-dollar">$816</div>
+                    <div class="price__title-night lang-nigth">/3 night</div>
+                  </div>
                 </div>
-                <div class="price__title-price">
-                  <div class="price__title-dollar">$2016</div>
-                  <div class="price__title-night lang-nigthTwo">/6 night</div>
+                <div class="price__card">
+                  <img src="/img/number3.png" alt="" class="price__card-img" />
+                  <p class="price__card-one-p lang-WildernessThree">
+                    Wilderness Club at Big Ceddar
+                  </p>
+                  <div class="price__title-one lang-Matrimonial">
+                    Habitación matrimonial
+                  </div>
+                  <div class="price__title-price">
+                    <div class="price__title-dollar">$1024</div>
+                    <div class="price__title-night lang-nigthTrhee">
+                      /8 night
+                    </div>
+                  </div>
                 </div>
-              </div>
-              <div class="price__card">
-                <img src="/img/number3.png" alt="" class="price__card-img" />
-                <p class="price__card-one-p lang-WildernessThree">
-                  Wilderness Club at Big Ceddar
-                </p>
-                <div class="price__title-one lang-Matrimonial">
-                  Habitación matrimonial
+                <div class="price__card">
+                  <img src="/img/number1.png" alt="" class="price__card-img" />
+                  <p class="price__card-one-p lang-WildernessFour">
+                    Wilderness Club at Big Ceddar
+                  </p>
+                  <div class="price__title-one lang-BathroomsTwo">2 Baños</div>
+                  <div class="price__title-price">
+                    <div class="price__title-dollar">$816</div>
+                    <div class="price__title-night lang-nigthCope">
+                      /3 night
+                    </div>
+                  </div>
                 </div>
-                <div class="price__title-price">
-                  <div class="price__title-dollar">$1024</div>
-                  <div class="price__title-night lang-nigthTrhee">/8 night</div>
+                <div class="price__card">
+                  <img src="/img/number2.png" alt="" class="price__card-img" />
+                  <p class="price__card-one-p lang-WildernessFive">
+                    Wilderness Club at Big Ceddar
+                  </p>
+                  <div class="price__title-one lang-jacuzziTwo">
+                    1 Baño con jacujacuzzi
+                  </div>
+                  <div class="price__title-price">
+                    <div class="price__title-dollar">$2016</div>
+                    <div class="price__title-night lang-nigthTwoCope">
+                      /6 night
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
